# pir-gmp

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  DamgardJurik.cpp  DamgardJurik.h  DamgardJurik.java  Deneme.java  Main.cpp  Makefile  README.md  Server.cpp  Server.h  Timing.cpp  bench.cpp  compilation~  dj  enc_timing.cpp  main.cpp  pailler.cpp  parallel.cpp  sequential.cpp  timingnew
openmp/: Untitled 1.xls  b.sh  c.sh  parallel.cpp  parallel_v2.cpp  resultsPAR_2.txt  resultsPar.txt  resultsSEQ_2.txt  resultsSeq.txt  tmp.cpp
results/: enc_timing.txt  enc_timing_1123.txt  enc_timing_1123_test.txt  result_bin_iter.txt  result_bin_iter_v2.txt  result_bin_new_method.txt  result_bin_prl.txt  result_bin_prl_2_v2.txt  result_bin_prl_deneme.txt  result_bin_prl_lvl2.txt  result_bin_prl_lvl2_v2.txt  result_bin_prl_method3.txt  result_bin_prl_v2.txt  result_client_octo.txt  result_client_quad.txt  result_octo_iter.txt  result_octo_prl.txt  result_octo_prl_v2.txt  result_quad_iter.txt  result_quad_iter_esas.txt  result_quad_new_method.txt  result_quad_prl.txt  result_quad_prl_2.txt  result_quad_prl_2_esas.txt  result_quad_prl_esas.txt  timing_newmethod.txt
